--- a/ecomprj/templates/core/checkout.html
+++ b/ecomprj/templates/core/checkout.html
@@ -111,12 +111,12 @@
                                             </div>
                                         </div>
         
-                                        {% comment %} <div class="form-group">
+                                        <div class="form-group">
                                             <div class="custom-control custom-radio">
                                                 <input type="radio" class="custom-control-input" name="payment" id="banktransfer" value="razorpay" onchange="handlePaymentSelection()">
                                                 <label class="custom-control-label" for="banktransfer">RAZORPAY</label>
                                             </div>
-                                        </div> {% endcomment %}
+                                        </div> 
         <!-- Your existing HTML code for the checkout page -->
 
 {% if messages %}
@@ -134,8 +134,8 @@
                                     </div>
                                    
                                     <div class="card-footer border-secondary bg-transparent">
-                                        <button id="place-order-button" class="btn btn-lg btn-block btn-secondary font-weight-bold my-3 py-3" type="submit">Place Order</button>
-                                        {% comment %} <button id="rzp-button1" class="btn btn-lg btn-block btn-secondary font-weight-bold my-3 py-3 paywithrazorpay" type="submit">Pay with RAZORPAY</button> {% endcomment %}
+                                        {% comment %} <button id="place-order-button" class="btn btn-lg btn-block btn-secondary font-weight-bold my-3 py-3" type="submit">Place Order</button> {% endcomment %}
+                                        <button id="rzp-button1" class="btn btn-lg btn-block btn-secondary font-weight-bold my-3 py-3 paywithrazorpay" type="submit">Pay with RAZORPAY</button>
                                     </div>
                                 </div>
                             </form>
@@ -248,37 +248,92 @@
 
             
 
+       
+
 
             <script>
-              document.getElementById('place-order-button').addEventListener('click', function() {
-                  document.getElementById('order-form').submit();
-              });
-          </script>
-           
-             <script>
-        function handlePaymentSelection() {
-            var codRadio = document.getElementById("directcheck");
-            var placeOrderButton = document.getElementById("place-order-button");
-            {% comment %} var razorpayButton = document.getElementById("rzp-button1"); {% endcomment %}
-            console.log("Selected Payment Method:", selectedPayment);
+                document.getElementById('place-order-button').addEventListener('click', function() {
+                    document.getElementById('order-form').submit();
+                });
+            </script>
+             
+               <script>
+          function handlePaymentSelection() {
+              var codRadio = document.getElementById("directcheck");
+              var placeOrderButton = document.getElementById("place-order-button");
+              var razorpayButton = document.getElementById("rzp-button1");
+              console.log(razorpayButton)
+              console.log("Selected Payment Method:", selectedPayment);
+  
+      
+              if (codRadio.checked) {
+                  placeOrderButton.style.display = "block";
+                  razorpayButton.style.display = "none";
+              } else {
+                  placeOrderButton.style.display = "none";
+                  razorpayButton.style.display = "block";
+              }
+          }
 
-    
-            if (codRadio.checked) {
-                placeOrderButton.style.display = "block";
-                {% comment %} razorpayButton.style.display = "none"; {% endcomment %}
-            } else {
-                placeOrderButton.style.display = "none";
-                {% comment %} razorpayButton.style.display = "block"; {% endcomment %}
+
+
+          document.addEventListener('DOMContentLoaded', function() {
+            var payButton = document.querySelector('.paywithrazorpay');
+            console.log("This page is loaded")
+        
+            payButton.addEventListener('click', function(event) {
+                event.preventDefault();
+        
+                var selects = document.querySelector("[name='addressId']").value;
+        
+                if (selects === "") {
+                    swal("Alert", "Address field is needed", "error");
+                    return false;
+                } else {
+                    console.log("Razorapay is loaded")
+                    fetch('/proceed-to-pay/')
+                        .then(function(response) {
+                            return response.json();
+                        })
+                        .then(function(data) {
+                            var options = {
+                                key: 'rzp_test_oR7x1WyMRe9zxr',
+                                amount: data.total * 100,
+                                currency: 'INR',
+                                name: 'techzone',
+                                description: 'Thank you for Placing an order ',
+                                image: 'https://static-00.iconduck.com/assets.00/bill-payment-icon-2048x2048-vpew78n5.png',
+                                handler: function(responseb) {
+                                    window.location.href = '/razorpay/' + selects;
+                                },
+                                prefill: {
+                                    name: '',
+                                    email: '',
+                                    contact: ''
+                                },
+                                notes: {
+                                    address: 'Razorpay Corporate Office'
+                                },
+                                theme: {
+                                    color: '#D19C97'
+                                }
+                            };
+        
+                            var rzp1 = new Razorpay(options);
+                            rzp1.open();
+                        })
+                        .catch(function(error) {
+                            console.error('Error:', error);
+                        });
             }
-        }
-    </script>
-
-       <!-- razorpay -->
-       <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
-       <!-- alert-message -->
-       <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
-
-                               
-                                {% endblock content %}
-
-          
+           });
+        });
+      </script>
+  
+         <!-- razorpay -->
+         <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
+         <!-- alert-message -->
+         <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+  
+         
+{% endblock content %}
