--- a/ecomprj/templates/core/checkout.html
+++ b/ecomprj/templates/core/checkout.html
@@ -300,7 +300,7 @@
                                 key: 'rzp_test_oR7x1WyMRe9zxr',
                                 amount: data.total * 100,
                                 currency: 'INR',
-                                name: 'techzone',
+                                name: 'TECHX',
                                 description: 'Thank you for Placing an order ',
                                 image: 'https://static-00.iconduck.com/assets.00/bill-payment-icon-2048x2048-vpew78n5.png',
                                 handler: function(responseb) {
