--- a/ecomprj/templates/core/checkout.html
+++ b/ecomprj/templates/core/checkout.html
@@ -134,7 +134,7 @@
                                     </div>
                                    
                                     <div class="card-footer border-secondary bg-transparent">
-                                        {% comment %} <button id="place-order-button" class="btn btn-lg btn-block btn-secondary font-weight-bold my-3 py-3" type="submit">Place Order</button> {% endcomment %}
+                                        <button id="place-order-button" class="btn btn-lg btn-block btn-secondary font-weight-bold my-3 py-3" type="submit">Place Order</button>
                                         <button id="rzp-button1" class="btn btn-lg btn-block btn-secondary font-weight-bold my-3 py-3 paywithrazorpay" type="submit">Pay with RAZORPAY</button>
                                     </div>
                                 </div>
