--- a/ecomprj/templates/core/products.html
+++ b/ecomprj/templates/core/products.html
@@ -270,7 +270,6 @@
 
 
 
-
                         <div class="col-lg-3 order-2 order-lg-1">
                             <!--sidebar-categores-box start  -->
                             <div class="sidebar-categores-box mt-sm-30 mt-xs-30">
@@ -281,7 +280,7 @@
                                 <div class="category-sub-menu">
                                     <ul>
                                         {% for i in default_main_category %}
-                                        <li > <a href="{% url 'core:category_products' i.id %}"> {{ i.name }}</a></li>
+                                            <li><a href="{% url 'core:category_products' i.id %}">{{ i.name }}</a></li>
                                         {% endfor %}
                                     </ul>
                                 </div>
@@ -290,76 +289,58 @@
                             <!--sidebar-categores-box end  -->
                             <!--sidebar-categores-box start  -->
                             <form method="GET" action="">
-                            <div class="sidebar-categores-box">
-                                <div class="sidebar-title">
-                                    <h2>Filter By</h2>
-                                </div>
-                                <!-- btn-clear-all start -->
-
-                                <button class="btn mt-20 w-100" type="submit" style="background-color: grey; color: white;">Apply</button>
-                                <!-- btn-clear-all end -->
-                                <!-- filter-sub-area start -->
-                                <div class="filter-sub-area">
-                                    <h5 class="filter-sub-titel">Categories</h5>
-                                    <div class="categori-checkbox">
+                                <div class="sidebar-categores-box">
+                                    <div class="sidebar-title">
+                                        <h2>Filter By</h2>
+                                    </div>
+                                    <!-- btn-clear-all start -->
+                                    <button class="btn mt-20 w-100" type="submit" style="background-color: grey; color: white;">Apply</button>
+                                    <!-- btn-clear-all end -->
+                                    <!-- filter-sub-area start -->
+                                    <div class="filter-sub-area">
+                                        <h5 class="filter-sub-titel">Categories</h5>
+                                        <div class="categori-checkbox">
                                             <ul> 
                                                 {% for i in default_main_category|slice:":3" %}
                                                     <li><input type="checkbox" name="category" id="category_checkbox_{{i.id}}" value="{{i.id}}"><a href="#"> {{ i.name }}</a></li>
                                                 {% endfor %}
                                             </ul>
+                                        </div>
                                     </div>
-                                 </div>
-                                <!-- filter-sub-area end -->
-                                {% comment %} <!-- filter-sub-area start -->
-                                <div class="filter-sub-area">
-                                    <h5 class="filter-sub-titel">Brand</h5>
-                                    <div class="categori-checkbox">
-                                            <ul> 
-                                                {% for i in brands %}
-                                                    <li><input type="checkbox" name="brand" id="brand_checkbox_{{i.id}}" value="{{i.id}}"><a href="#"> {{ i.name }}</a></li>
-                                                {% endfor %}
+                                    <!-- filter-sub-area end -->
+                                    <!-- Price range -->
+                                    <div class="filter-sub-area pt-sm-10 pt-xs-10">
+                                        <h5 class="filter-sub-titel">Price range</h5>
+                                        <div class="size-checkbox">
+                                            <ul>
+                                                <li><input type="checkbox" name="price_range" value="0-3000"><a href="#">Less than ₹3000</a></li>
+                                                <li><input type="checkbox" name="price_range" value="3000-10000"><a href="#">₹3000 - ₹10,000</a></li>
+                                                <li><input type="checkbox" name="price_range" value="10000-25000"><a href="#">₹10,000 - ₹25,000</a></li>
+                                                <li><input type="checkbox" name="price_range" value="25000-100000"><a href="#">₹25,000 - ₹100,000</a></li>
+                                                <li><input type="checkbox" name="price_range" value="100000-100000000"><a href="#">Above - ₹100,000</a></li>
                                             </ul>
+                                        </div>
                                     </div>
-                                 </div> {% endcomment %}
-                                <!-- filter-sub-area end -->
-                                <!-- Price range -->
-                                <div class="filter-sub-area pt-sm-10 pt-xs-10">
-                                    <h5 class="filter-sub-titel">Price range</h5>
-                                    <div class="size-checkbox">
-                                        <ul>
-                                            <li><input type="checkbox" name="price_range" value="0-3000"><a href="#">Less than ₹3000</a></li>
-                                            <li><input type="checkbox" name="price_range" value="3000-10000"><a href="#">₹3000 - ₹10,000</a></li>
-                                            <li><input type="checkbox" name="price_range" value="10000-25000"><a href="#">₹10,000 - ₹25,000</a></li>
-                                            <li><input type="checkbox" name="price_range" value="25000-100000"><a href="#">₹25,000 - ₹100,000</a></li>
-                                            <li><input type="checkbox" name="price_range" value="100000-100000000"><a href="#">Above - ₹100,000</a></li>
-                                        </ul>
+                                    <!-- filter-sub-area end -->
+                                    <!-- filter-sub-area start -->
+                                    <div class="filter-sub-area pt-sm-10 pt-xs-10">
+                                        <h5 class="filter-sub-titel">Color</h5>
+                                        <div class="size-checkbox">
+                                            <ul>
+                                                <li><input type="checkbox" name="color_range" value="black"><a href="#">Black</a></li>
+                                                <li><input type="checkbox" name="color_range" value="White"><a href="#">White</a></li>
+                                                <li><input type="checkbox" name="color_range" value="Green"><a href="#">Green</a></li>
+                                                <li><input type="checkbox" name="color_range" value="Blue"><a href="#">Blue</a></li>
+                                                <li><input type="checkbox" name="color_range" value="Red"><a href="#">Red</a></li>
+                                            </ul>  
+                                        </div>
                                     </div>
+                                    <!-- filter-sub-area end -->
                                 </div>
-                                <!-- filter-sub-area end -->
-                                <!-- filter-sub-area start -->
-                                <div class="filter-sub-area pt-sm-10 pt-xs-10">
-                                    <h5 class="filter-sub-titel">Color</h5>
-                                    <div class="size-checkbox">
-                                        <ul>
-                                            <li><input type="checkbox" name="color_range" value="Black"><a href="#">Black</a></li>
-                                            <li><input type="checkbox" name="color_range" value="White"><a href="#">White</a></li>
-                                            <li><input type="checkbox" name="color_range" value="Green"><a href="#">Green</a></li>
-                                            <li><input type="checkbox" name="color_range" value="Blue"><a href="#">Blue</a></li>
-                                            <li><input type="checkbox" name="color_range" value="Red"><a href="#">Red</a></li>
-                                        </ul>  
-                                    </div>
-                                </div>
-                                <!-- filter-sub-area end -->
-
-                            </div>
-                              <button class="btn-clear-all mb-sm-30 mb-xs-30">Clear all</button>
-                            <br>
-                            <br>
-                            <br>
-                            
-                        </form>
-      
+                                <button class="btn-clear-all mb-sm-30 mb-xs-30" type="reset">Clear all</button>
+                            </form>
                         </div>
+                        
                     </div>
                     <div class="pagination-area">
                         <div class="row">
